--- a/audio3d.html
+++ b/audio3d.html
@@ -69,7 +69,7 @@
 				light.position.set( 0, 0.5, 1 ).normalize();
 				scene.add( light );
 				var sphere = new THREE.SphereGeometry( 20, 32, 16 );
-				material_sphere1 = new THREE.MeshPhongMaterial( { color: 0xffaa00, shading: THREE.FlatShading, shininess: 0 } );
+				material_sphere1 = new THREE.MeshPhongMaterial( { color: 0xbbaa00, shading: THREE.FlatShading, shininess: 0 } );
 				material_sphere2 = new THREE.MeshPhongMaterial( { color: 0xff2200, shading: THREE.FlatShading, shininess: 0 } );
 				material_sphere3 = new THREE.MeshPhongMaterial( { color: 0x6622aa, shading: THREE.FlatShading, shininess: 0 } );
 				// sound spheres
